--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/ZoundLoud/comment_section_proxy_kevin#readme",
   "dependencies": {
+    "artillery": "^1.6.0-27",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
+    "nodemon": "^1.18.10",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "request": "^2.88.0",
@@ -29,5 +31,10 @@
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
+  },
+  "devDependencies": {
+    "http-proxy-middleware": "^0.19.1",
+    "http-proxy-server": "0.0.6",
+    "nodemon": "^1.18.10"
   }
 }
